# Sentinel

./: .gitignore  CWebSocket.py  Dockerfile  Mybot.py  Schema.py  apiplayground.py  app.py  commands.py  config.py  custom_session.py  database.db  dbupdate_steps.py  dbutility.py  fly.toml  main.py  market.py  pyproject.toml  replit-deploy.json  requirements.txt  staticDataGenerator.py  webserver.py
.github/workflows/: fly.yml
assets/: data_esi.json
json/: alliances.json  constellations.json  corporations.json  invMarketGroups.json  invTypes.json  names.json  regions.json  server_configs.json  ships.json  staStations.json  systems.json  watchlists.json
storage/assets/: data_esi.json  staStations.json  stations_30000162.json
storage/json/: alliances.json  server_configs.json  ships.json  staStations.json  watchlists.json
templates/: base.html
