[tool.poetry]
name = "repl_nix_Sentinel"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.1.0"
requests = "^2.28.1"
SQLAlchemy = "^1.4.44"
ujson = "^5.6.0"
websocket = "^0.2.1"
Flask = "^2.2.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
websocket = "^0.37.0"